[package]
authors = ["Team La Fine Bouche"]
description = "Rust backend implementation for La Fine Bouche"
edition = "2021"
homepage = "lafinebouche.xyz"
license-file = "LICENSE"
name = "lfb-back"
readme = "README.md"
repository = "https://github.com/greged93/lfb-back"
version = "0.0.1"

[dependencies]
rocket = {version="0.5.0-rc.2", features=["json"]}
serde = "1.0.147" # Used in the Map Data into Structs section
thiserror = "1.0.37"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["sync"]
