[package]
authors = ["Team La Fine Bouche"]
description = "Rust backend implementation for La Fine Bouche"
edition = "2021"
homepage = "lafinebouche.xyz"
license-file = "LICENSE"
name = "lfb-back"
readme = "README.md"
repository = "https://github.com/greged93/lfb-back"
version = "0.0.1"

[dependencies]
rocket = {version="0.5.0-rc.2", features=["json"]}
serde = "1.0.147" # Used in the Map Data into Structs section
thiserror = "1.0.37"
merkletree = "0.22.1"
tiny-keccak = { version = "2.0.2",  features = ["keccak"] }
hex-literal = "0.3.4"
hex = "0.4.3"
typenum = "1.15.0"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["sync"]
